# binary-greedy-meshing

./: Cargo.toml
benches/: mesh.rs
examples/: sphere.rs  transparency.rs
src/: lib.rs  types.rs
