[package]
name = "binary-greedy-meshing"
version = "0.5.0"
edition = "2024"
description = "A port of https://github.com/cgerikj/binary-greedy-meshing to Rust."
license = "MIT"
repository = "https://github.com/Inspirateur/binary-greedy-meshing"
keywords = ["meshing", "greedy", "binary", "voxel", "chunk"]

[dev-dependencies]
# bevy = "0.16.1"
criterion = "0.6"

[[bench]]
name = "mesh"
harness = false

[dependencies]
enum-map = "2.7.3"
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = "0.30.10"
ndshape = "0.3.0"
